--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
     "start": "node src/server.js"
   },
@@ -16,6 +17,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^1.14.9"
+    "jest": "^25.0.0",
+    "nodemon": "^1.14.9",
+    "supertest": "^6.3.3"
   }
 }
