--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2"
