--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "pg": "^8.11.1"
   },
   "devDependencies": {
     "jest": "^25.0.0",
