--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "knex": "^2.4.2",
+    "nodemailer": "^6.9.3",
     "pg": "^8.11.1"
   },
   "devDependencies": {
