--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "nodemailer": "^6.9.3",
-    "pg": "^8.11.1"
+    "pg": "^8.11.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.1",
