Added size validation for text fields and update todo.md

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=8000
 AUTH_EMAIL=new.savic.rccbrasil@gmail.com
 AUTH_PASS=guvilxslnppbyavs
-SHOW_CONSOLE_EMAIL=0 # 0 turn off warnings in SuperJest tests / 1 turns on
+SHOW_CONSOLE_EMAIL=0 # 0 turns off warnings in SuperJest tests / 1 turns on
 EMAIL_EXPIRATION=21600000 #6 hours
+CPF_VALIDATION=1 # 0 turns it off to make tests easier
