--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 PORT=8000
+SERVER_ADDRESS=http://localhost
 AUTH_EMAIL=new.savic.rccbrasil@gmail.com
 AUTH_PASS=guvilxslnppbyavs
 SHOW_CONSOLE_EMAIL=0 # 0 turns off warnings in SuperJest tests / 1 turns on
+JWT_SECRET=n&W_S@w!k_JwtS&crt
 EMAIL_EXPIRATION=21600000 #6 hours
+EMAIL_RESET_LINK_EXPIRATION=15m
 CPF_VALIDATION=1 # 0 turns it off to make tests easier
+PASSWORD_MIN_SIZE=8
