--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "knex": "^2.4.2",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
