Added reset password and friendly messages with html

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ EMAIL_EXPIRATION=21600000 #6 hours
 EMAIL_RESET_LINK_EXPIRATION=15m
 CPF_VALIDATION=1 # 0 turns it off to make tests easier
 PASSWORD_MIN_SIZE=8
+RESET_EXPIRATION=1800000 # 30 min
