Added database migration and users.updated_at field

--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
+# server
 PORT=8000
 SERVER_ADDRESS=http://localhost
+
+# database
+DB_HOST=127.0.0.1
+DB_PORT=5432
+SERVER_USER=postgres
+DB_PASSWORD=
+DB_NAME=newsavic
+
+# email
 AUTH_EMAIL=new.savic.rccbrasil@gmail.com
 AUTH_PASS=guvilxslnppbyavs
 SHOW_CONSOLE_EMAIL=0 # 0 turns off warnings in SuperJest tests / 1 turns on
-JWT_SECRET=n&W_S@w!k_JwtS&crt
+#JWT_SECRET=n&W_S@w!k_JwtS&crt
 EMAIL_EXPIRATION=21600000 #6 hours
 EMAIL_RESET_LINK_EXPIRATION=15m
+
 CPF_VALIDATION=1 # 0 turns it off to make tests easier
 PASSWORD_MIN_SIZE=8
 RESET_EXPIRATION=1800000 # 30 min
