--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "jest --verbose --detectOpenHandles",
     "test-watch": "jest --watch",
-    "watch": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "watch": "nodemon src/dist/server.js",
+    "start": "node src/dist/server.js",
+    "postinstall": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +18,8 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.9",
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
@@ -26,9 +30,13 @@
     "knex": "^2.4.2",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@tsconfig/node18": "^18.2.0",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
