--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/knex": "^0.16.1",
     "@types/node": "^20.4.9",
+    "@types/nodemailer": "^6.4.9",
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
