--- a/package.json
+++ b/package.json
@@ -32,15 +32,22 @@
     "knex": "^2.4.2",
     "nodemailer": "^6.9.3",
     "pg": "^8.11.1",
-    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/fs-extra": "^11.0.1",
+    "@types/shelljs": "^0.8.12",
+    "fs-extra": "^11.1.1",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^5.0.1",
+    "shelljs": "^0.8.5",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   }
 }
