--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.5.7",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
