--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "jest": {
-    "testEnvironment": "node"
-  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
@@ -32,8 +29,10 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "jest": "^29.6.1",
+    "@types/jest": "^29.5.4",
+    "jest": "^29.6.4",
     "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
