--- a/.env
+++ b/.env
@@ -10,13 +10,15 @@ DB_PASSWORD=
 DB_NAME=newsavic
 
 # email
-AUTH_EMAIL=new.savic.rccbrasil@gmail.com
-AUTH_PASS=guvilxslnppbyavs
+AUTH_EMAIL=lpkdevpassos@gmail.com
+AUTH_PASS=jzid onsw mzks ujoy
+AUTH_EMAIL2=new.savic.rccbrasil@gmail.com
+AUTH_PASS2=guvilxslnppbyavs
 SHOW_CONSOLE_EMAIL=0 # 0 turns off warnings in SuperJest tests / 1 turns on
 #JWT_SECRET=n&W_S@w!k_JwtS&crt
 EMAIL_EXPIRATION=21600000 #6 hours
 EMAIL_RESET_LINK_EXPIRATION=15m
 
-CPF_VALIDATION=1 # 0 turns it off to make tests easier
+CPF_VALIDATION=0 # 0 turns it off to make tests easier
 PASSWORD_MIN_SIZE=8
 RESET_EXPIRATION=1800000 # 30 min
