--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newsavic-api",
+  "name": "newsys-api",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/src/server.js",
@@ -9,9 +9,9 @@
     "test-watch": "jest --watch",
     "watch": "nodemon ./dist/src/server.js",
     "start": "node ./dist/src/server.js",
-    "postinstall": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "build": "tsc -p tsconfig.build.json"
+    "build": "tsc -p tsconfig.build.json",
+    "migration": "knex migrate:latest"
   },
   "keywords": [],
   "author": "",
@@ -20,8 +20,8 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "bcrypt-nodejs": "^0.0.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
