--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "knex": "^2.4.2",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.5",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
