Refactoring controller and tests

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "test": "jest --verbose --detectOpenHandles",
-    "test-watch": "jest --watch",
-    "watch": "nodemon ./dist/src/server.js",
+    "test-watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --watch --config ./jest.config.js",
+    "watchjs": "nodemon --ext js ./dist/src/server.js",
+    "watchts": "nodemon ./src/server.ts",
     "start": "node ./dist/src/server.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "build": "tsc -p tsconfig.build.json",
@@ -22,6 +23,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -32,6 +34,7 @@
     "pg": "^8.11.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "ts-node": "^10.9.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
